--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python: [ 3.6, 3.7, 3.8, 3.9 ]
+        python: [3.8, 3.9, '3.10' ]
 
     steps:
       - uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - name: Install Poetry
-        uses: snok/install-poetry@v1.1.6
+        uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
@@ -30,13 +30,13 @@ jobs:
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install Poetry dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
+        run: poetry install --no-interaction --no-root --with dev
       - name: Install library and dependencies
         run: |
           if [[ "$RUNNER_OS" == "Linux" || "$RUNNER_OS" == "macOS" ]]; then
-            poetry run make dependencies
+            make dependencies
           elif [ "$RUNNER_OS" == "Windows" ]; then
-            poetry install --no-interaction
+            poetry install --no-interaction --with dev
             poetry run pre-commit install
           else
             echo "$RUNNER_OS not supported"
@@ -49,7 +49,7 @@ jobs:
         run: |
           source $VENV
           if [[ "$RUNNER_OS" == "Linux" || "$RUNNER_OS" == "macOS" ]]; then
-            poetry run make docs
+            make docs
           elif [ "$RUNNER_OS" == "Windows" ]; then
             poetry run sphinx-build -b html ./docs ./docs/_build
           else
