--- a/.github/workflows/deploy-package-and-documentation.yml
+++ b/.github/workflows/deploy-package-and-documentation.yml
@@ -2,50 +2,60 @@ name: govuk-tech-docs-sphinx-theme deploy package and documentation
 
 on:
   release:
-    types: [ released ]
+    types: [released]
 
 jobs:
   deploy-package-and-documentation:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: "3.12"
+
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
+          installer-parallel: true
+
       - name: Load cached virtual environment
         id: cached-poetry-dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
       - name: Install Poetry dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root --with dev
+
       - name: Install dependencies
         run: make dependencies
+
       - name: Create documentation
         run: make docs
+
       - name: Build package
         run: poetry build
+
       - name: Set the deployment configuration for Poetry
         run: poetry config pypi-token.pypi "$PYPI_API_TOKEN"
         env:
           PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         shell: bash
+
       - name: Publish to GitHub Pages
         if: startsWith(github.ref, 'refs/tags')
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@v4.6.4
         with:
           branch: gh-pages
           folder: docs/_build
+
       - name: Deploy package to PyPI
         if: startsWith(github.ref, 'refs/tags')
         run: poetry publish
