Allow dispatch of deploy workflow.

--- a/.github/workflows/deploy-package-and-documentation.yml
+++ b/.github/workflows/deploy-package-and-documentation.yml
@@ -3,6 +3,7 @@ name: govuk-tech-docs-sphinx-theme deploy package and documentation
 on:
   release:
     types: [released]
+  workflow_dispatch:
 
 jobs:
   build-wheels:
